[package]
name = "rustarok"
version = "0.1.0"
authors = ["Balázs Bódi <balazs.bodi@accenture.com>"]
edition = "2018"

[dependencies]
gl = "0.12.0"
encoding = "0.2.33"
nalgebra = "0.18.0"
ncollide3d = "0.19.1"
nphysics3d = "0.11.1"
rand = "0.6.5"
imgui = "0.0.22"
imgui-opengl-renderer = "0.4.0"
imgui-sdl2 = "0.5.0"
sublime_fuzzy = "0.6.0"
websocket = "0.22.4"
log = "0.4.6"
simple-logging = "2.0.2"
specs = "0.14.3"
specs-derive = "0.4.0"

[dependencies.sdl2]
version = "0.32.1"
default-features = false
features = ["image"]