[package]
name = "rustarok"
version = "0.1.0"
authors = ["<bbodi@gmail.com>"]
edition = "2018"

[dependencies]
singleton_gl_dont_use_it = { package = "gl", version = "0.13.0" }
byteorder = "1.3.2"
encoding = "0.2.33"
nalgebra = "0.18.0"
ncollide2d = "0.20.0"
nphysics2d = "0.12.0"
rand = "0.6.5"
imgui = "0.0.22"
imgui-opengl-renderer = "0.4.0"
imgui-sdl2 = "0.5.0"
sublime_fuzzy = "0.6.0"
websocket = "0.22.4"
log = "0.4.6"
simple-logging = "2.0.2"
specs-derive = "0.4.0"
strum = "0.15.0" # for iterating over enums
strum_macros = "0.15.0"
libflate = "0.1.25"
config = "0.9.3"
serde = {version = "1.0.97", features = ["derive"]}
serde_json = "1.0.40"
actix-web = "1.0.5"
actix-rt = "0.2.4"
actix-files = "0.1.4"
crossbeam-channel = "0.3.8"
notify = "=5.0.0-pre.1"
vek = "0.9.9"

[dependencies.specs]
version = "0.14.3"
default-features = false
features = []

[dependencies.sdl2]
version = "0.32.2"
default-features = false
features = ["image", "ttf", "mixer"]