[package]
name = "rustarok-common"
version = "0.1.0"
authors = ["<bodidev@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.2"
encoding = "0.2.33"
log = "0.4.6"
libflate = "0.1.25"
serde = {version = "1.0.97", features = ["derive"]}
serde_json = "1.0.40"
specs-derive = "0.4.0"

[dependencies.nalgebra]
version = "0.18.0"
features = ["serde-serialize"]

[dependencies.specs]
version = "0.14.3"
default-features = false
features = []

[dev-dependencies]

