[package]
name = "rustarok-server"
version = "0.1.0"
authors = ["<bodidev@gmail.com>"]
edition = "2018"

[profile.dev.package."*"]
opt-level = 2

[dependencies]
rustarok-common = { path = "../common" }

byteorder = "1.3.2"
encoding = "0.2.33"
rand = "0.6.5"
sublime_fuzzy = "0.6.0"
log = "0.4.6"
simple-logging = "2.0.2"
specs-derive = "0.4.0"
strum = "0.15.0" # for iterating over enums
strum_macros = "0.15.0"
libflate = "0.1.25"
config = "0.9.3"
serde = {version = "1.0.97", features = ["derive"]}
serde_json = "1.0.40"
crossbeam-channel = "0.3.8"
notify = "=5.0.0-pre.1"
vek = "0.9.9"
ncollide2d = "0.20.0"
nphysics2d = "0.12.0"
bincode = "1.2.1"

[dependencies.specs]
version = "0.16.0"
default-features = false
features = []

[dependencies.nalgebra]
version = "0.18.0"
features = ["serde-serialize"]

[dev-dependencies]
assert_approx_eq = "1.1.0"